# shakeback

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/sine/: make_checkpoint.py  problem.py
src/shakeback/: __init__.py  cli.py  core.py  problem.py
