[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shakeback"
version = "0.1.0"
description = "Unstick backpropagation with noise perturbation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Rohana Rezel" }]
keywords = ["deep-learning", "training", "optimization", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.0"]

[project.urls]
Homepage = "https://github.com/rayonnant-ai/shakeback"

[project.scripts]
shakeback = "shakeback.cli:main"
